# AI-Radar

./: .env.example  .gitignore  DEPLOY.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.claude/: settings.local.json
docs/: ARCHITECTURE.md  REQUIREMENTS.md
openclaw/: agent.json
python/: pyproject.toml
python/src/: pipeline.py
python/src/cleaners/: health_monitor.py  intelligence_filter.py  normalizer.py
python/src/models/: daily_report.py  raw_intelligence.py
python/src/scrapers/: anthropic_blog.py  arxiv.py  base.py  deepmind.py  github_trending.py  huggingface.py  meta_ai.py  openai_blog.py  reddit.py  twitter.py  wechat.py  zhihu.py
scripts/: daily-collect.bat  daily-pipeline.bat  daily-push.sh  deploy-server.sh  generate-report.sh  one-click-deploy.sh  run-daily.sh  run-pipeline.sh
shared/schema/: daily-report.json  raw-intelligence.json
typescript/: tsconfig.json
typescript/src/: config.ts  generate-report.ts  index.ts  orchestrator.ts
typescript/src/agent/: index.ts  parser.ts  prompts.ts
typescript/src/delivery/: formatter.ts  index.ts  openclaw-skill.ts  push.ts  server-chan.ts
typescript/src/types/: daily-report.ts  index.ts  raw-intelligence.ts
typescript/tests/: validate-data.ts
