[project]
name = "ai-radar-python"
version = "0.1.0"
description = "AI Radar - Data collection and preprocessing layer"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "playwright>=1.40",
    "datamodel-code-generator>=0.25",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
